[package]
name = "zentime-rs"
version = "0.4.1"
edition = "2021"
description = "Pomodoro and productivity timer written in Rust"
license = "MIT"
repository = "https://github.com/on3iro/zentime-rs"
readme = "README.md"
keywords = ["timer", "pomodoro", "productivity"]
categories = ["command-line-utilities"]

[workspace]
members = ["timer"]

[[bin]]
name = "zentime"
path = "src/main.rs"

[dependencies]
zentime-rs-timer = { path = "./timer", version = "0.6" }
figment = { version = "0.10", features = ["toml"] }
rodio = "0.12"
notify-rust = "4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.25.0"
tui = "0.19.0"
shellexpand = "2.1.0"
serde = { version = "1", features = ["derive"] }
