[package]
name = "zentime-rs"
version = "0.5.0"
edition = "2021"
description = "Pomodoro and productivity timer written in Rust"
license = "MIT"
repository = "https://github.com/on3iro/zentime-rs"
readme = "README.md"
keywords = ["timer", "pomodoro", "productivity"]
categories = ["command-line-utilities"]

[workspace]
members = ["timer"]

[[bin]]
name = "zentime"
path = "src/main.rs"

[dependencies]
zentime-rs-timer = { path = "./timer", version = "0.8" }
daemonize = { version = "0.4" }
interprocess = { version = "1.2", features = ["tokio_support", "signals"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
crossbeam = "0.8"
futures = "0.3"
async-trait = "0.1"
figment = { version = "0.10", features = ["toml"] }
rodio = "0.12"
sysinfo = "0.26.8"
notify-rust = "4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.25.0", features = ["event-stream"] }
tui = "0.19.0"
shellexpand = "2.1.0"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1"
