[package]
name = "zentime-rs"
version = "0.13.1"
edition = "2021"
description = "Pomodoro and productivity timer written in Rust"
license = "MIT"
repository = "https://github.com/on3iro/zentime-rs"
readme = "README.md"
keywords = ["timer", "pomodoro", "productivity"]
categories = ["command-line-utilities"]

[workspace]
members = ["timer"]

[[bin]]
name = "zentime"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
crossterm = { version = "0.25.0", features = ["event-stream"] }
daemonize = { version = "0.4" }
env_logger = "0.10"
figment = { version = "0.10", features = ["toml"] }
futures = "0.3"
interprocess = { version = "1.2", features = ["tokio_support", "signals"]}
log = "0.4"
notify-rust = "4"
rand = { version = "0.8", features = ["std", "std_rng"] }
rmp-serde = "1.1"
rodio = "0.12"
serde = { version = "1", features = ["derive"] }
shellexpand = "2.1.0"
sysinfo = "0.26.8"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tui = "0.19.0"
zentime-rs-timer = { path = "./timer", version = "0.10" }
