[package]
name = "zentime-rs-timer"
version = "0.7.0"
edition = "2021"
description = "Pausable productivity timer"
license = "MIT"
repository = "https://github.com/on3iro/zentime-rs"
readme = "README.md"
keywords = ["timer", "pomodoro", "productivity"]
categories = ["command-line-utilities"]

[lib]
name = "zentime_rs_timer"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
